--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <li>Aproveitar o terceiro ano</li>
         <li>Ir para o intercâmbio</li>
         <li>Aproveitar ao máximo o intercâmbio</li>
+        <li>O biruta ta doido</li>
+<p>Certamente é um commit</p>
     </ul>
 </body>
 </html>
