--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <h1>TEXTO OU IMAGEM</h1>
+    <h1>OBJETIVOS</h1>
 </header>
     <ul>
         <li>Ter boas notas</li>
