--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus Objetivos</title>
+    <title>Meus objetivos do ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>
-    <h1>OBJETIVOS</h1>
-</header>
-    <ul>
-        <li>Ter boas notas</li>
-        <li>Ter boa frequência na escola</li>
-        <li>Aproveitar o tempo com meus amigos</li>
-        <li>Aproveitar o terceiro ano</li>
-        <li>Ir para o intercâmbio</li>
-        <li>Aproveitar ao máximo o intercâmbio</li>
-    </ul>
+    <section class="conteudo-principal">
+        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <div class="botoes">
+            <button class="botao">Ter boas notas</button>
+            <button class="botao">Aproveitar tempo com meus amigos</button>
+            <button class="botao">Ir para o intercâmbio</button>
+            <button class="botao">Aproveitar ao máximo o intercãmbio</button>
+        </div>
+    </section>
 </body>
 </html>
