--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <button class="botao">Ir para o intercâmbio</button>
             <button class="botao">Aproveitar ao máximo o intercãmbio</button>
         </div>
+        <div class="abas-textos">
+        </div>
     </section>
 </body>
 </html>
