--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
         <div class="botoes">
+            <div class="abas-textos">
             <button class="botao">Ter boas notas</button>
+            </div>
+            <div class="abas-textos">
             <button class="botao">Aproveitar tempo com meus amigos</button>
+            </div>
+            <div class="abas-textos">
             <button class="botao">Ir para o intercâmbio</button>
+            </div> 
+            <div class="abas-textos">
             <button class="botao">Aproveitar ao máximo o intercãmbio</button>
+            </div>
         </div>
         <div class="abas-textos">
         </div>
